# CODECsuite

./: .gitignore  .gitmodules  CMakeLists.txt  CODECsuite_TPC_Notice_Final.txt  LICENSE.txt  README.md  accuracy.cpp  alignment_consensus.cpp  annotate_bam_with_umis.cpp  backup  codec.cpp  consensus.cpp  demux.cpp  duplex_filter.cpp  filter.cpp  testmpileup.cpp  trimadapter.cpp  trimbam.cpp
bbcpputil/: .gitmodules
bbcpputil/cpp/: AlignmentConsensus.cpp  BamRecordExt.cpp
bbcpputil/include/: Algo.h  Alignment.h  AlignmentConsensus.h  BamRecordExt.h  DNAUtils.h  FastxIO.h  FastxRecord.h  Files.h  GenomicRegionCollectionExt.h  Gotoh.h  Insert.h  InsertSeqFactory.h  MAF.h  MutCounter.h  ReadVCF.h  Stats.h  StringUtils.h  TargetLayout.h  Variant.h  pileup.h
include/: Adapter.h  BamIO.h  Index.h
msi/: Snakefile  msi.R  msi.cpp
obsolete/: bamtofastq.cpp  concat_umi_to_fastq.cpp  print_qual.cpp
paper/: README.md  duplex_yield.ipynb  paper.R  utils.R
paper/data/figure2/a/: 05246_315_sc_idtpancan_cfdna.cds_consensus.mol_consensus_mutation_metrics.txt  05246_315_sc_idtpancan_cfdna.dsc_mutation_metrics.txt  Dup_pan.05246_315_ctDNA.mol_consensus_mutation_metrics.txt  Dup_pan.HD_82_ctDNA.mol_consensus_mutation_metrics.txt  HD_82_sc_idtpancan_cfdna.cds_consensus.mol_consensus_mutation_metrics.txt  HD_82_sc_idtpancan_cfdna.dsc_mutation_metrics.txt
paper/data/figure2/e/: SpermNanoseq.raw.context_count.txt  SpermNanoseq.raw.mutation_metrics.txt  SpermNanoseq.raw.variants_called.txt  sperm_gDNA.R1.context_count.txt  sperm_gDNA.R1.mutation_metrics.txt  sperm_gDNA.R1.variants_called.txt  sperm_gDNA.R1_duprep.context_count.txt  sperm_gDNA.R1_duprep.mutation_metrics.txt  sperm_gDNA.R1_duprep.variants_called.txt  (+6 more)
paper/data/msi/: msi_profile.json
snakemake/: README.md  jobscript.sh  qsub_wrapper.py
snakemake/AdapV2/: Snakefile
snakemake/AdapV2/capture_wf_1/: Snakefile
snakemake/AdapV2/wgs/: Snakefile
snakemake/DupSeq_capture/: Snakefile
snakemake/examples/caputure/: config.yaml  input.tsv
snakemake/examples/wgs/: config.yaml  input.tsv  runSnakemake.sh
snakemake/pipeline_input_examples/caputure/: input.tsv  runSnakemake.sh
snakemake/pipeline_input_examples/wgs/: input.tsv
snakemake/script/: R01.R  agg_log.py  agg_miredas.py  byproduct.R  calculate_monomer_error_rate.py  cds_summarize.py  cnv_analysis.R  codec2maf  collect_duplex_metrics.py  cov_sum.py  create_maf_from_probe_rg.py  data_analysis.R  downsample_read_families.py  error_rate_by_family_size.py  errorrate.R  errorrate_vs_fragsize_heatmap.R  extract_false_positive_reads.py  familysize_dist.py  fastqsplit.pl  generate_reads.py  get_midpoint_from_interval.py  maf2vcf.py  monomer_error_rate.py  msisensor_combine_result.py  mutect_to_maf.py  plot_duprecov.R  print_mut_cpgstatus.py  print_snv_roc.py  rev_qualscore.py  vcf_update_genotype.py  vcf_validate_against_maf.py  wgs_cov_plot.R
snakemake/script/dpx/: downsampler.py  get_mutant_metrics.py  intervals.py
(+168 files in other folders)
